syntax = "proto3";

package com.tales.terra.rpc.v1.get_user.v1;

option java_multiple_files = true;

message GetUserRequest {
  string name = 1;
}

message GetUserResponse {
  string message = 1;
}
